# BAG-Converter

./: .gitignore  Cargo.toml  LICENSE  README.md  Untitled  num.csv
.github/workflows/: ci.yml
src/: args.rs  error.rs  helpers.rs  input.rs  lig.rs  main.rs  schema.rs  sta.rs  vbo.rs  work_dir.rs  writer.rs
src/bag/: geometries.rs  lib.rs  lig.rs  mod.rs  num.rs  opr.rs  pnd.rs  shared.rs  sta.rs  vbo.rs  wpl.rs
src/helpers/: csv_writer.rs  deserializers.rs  mod.rs  parsers.rs  zip_seek.rs
test/: test.rs
