[package]
name = "nlx"
version = "0.0.31"
author = "Paul Duvenage <duvenagep@gmail.com>"
about = "A simple CLI to parse the LVBAG Extract XMLs"
description = "A general purpose open source CLI to convert the Dutch LVBAG data"
repository = "https://github.com/duvenagep/BAG-Converter"
readme = "README.md"
license = "MIT"
keywords = ["lvbag", "PDOK", "Kadaster", "CLI", "Clap", "quick-xml"]
categories = ["cli", "utility"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
clippy = "0.0.302"
csv = "1.2.1"
geo = { version = "0.25.0", features = ["use-serde", "proj"] }
human_bytes = "0.4.2"
indicatif = { version = "0.17.3", features = ["rayon"] }
pretty_assertions = "1.3.0"
proj = "0.27.0"
quick-xml = { version = "0.28.2", features = ["tokio", "serialize", "async-tokio"] }
rayon = "1.7.0"
serde = { version = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0.99"
wkt = { version = "0.10.3", features = ["serde"] }
zip = "0.6.5"

[profile.release]
debug = true
